# aws-stepfunctions-manager

./: .dockerignore  .gitignore  Dockerfile  pyproject.toml  readme.md  ruff.toml
app/: detail_executions.py  home.py  manager.py  new_run.py  show_input.py
app/utils/: app_storage.py  aws_manager.py  config_loader.py  date_utils.py  nicegui_utils.py
assets/styles/: main.css  table.css
configs/: refactoring_reviews.yaml
